@@ -1,3 +1,6 @@
+2016-07-09 Patrick Galbraith, Michiel Beijen, DBI/DBD community (4.035)
+*  Add DBI back to configure_requires, fix by miyagawa.
+
 2016-07-06 Patrick Galbraith, Michiel Beijen, DBI/DBD community (4.034)
 * Full version, to include all changes since 4.033.
 
